--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
-  "name": "ticket-bot-master",
-  "version": "1.0.0",
-  "description": "Un bot de Ticket développeur par InfinityDev!",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AzukioPrs/ticket-bot-master.git"
-  },
-  "keywords": [
-    "ticket-bot-master"
-  ],
-  "author": "AzukioPrs",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AzukioPrs/ticket-bot-master/issues"
-  },
-  "homepage": "https://github.com/AzukioPrs/ticket-bot-master#readme",
-  "dependencies": {
-    "discord.js": "^12.5.3",
-    "moment": "^2.29.1",
-    "moment-duration-format": "^2.3.2",
-    "mongoose": "^5.12.4"
-  }
+    "name": "ticket-bot-master",
+    "version": "1.0.0",
+    "description": "Un bot de Ticket développeur par InfinityDev!",
+    "main": "index.js",
+    "scripts": {
+        "test": "run"
+    },
+    "author": "AzukioPrs",
+    "license": "ISC",
+    "dependencies": {
+        "discord-html-transcripts": "^2.3.2",
+        "discord.js": "^13.6.0",
+        "moment": "^2.29.3"
+    }
 }
